tests/error/cast_unknown.gw
#! [contains] unknown type
 1 $ UnknownType;
